<?xml version="1.0"?>
<package format="2">
  <name>gui</name>
  <version>0.1.0</version>
  <description>

     gui

  </description>
  <maintainer email="mark@gmail.com">mark</maintainer>
  <author>mark</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <depend>qt_build</depend>
  <depend>roscpp</depend>
  <depend>libqt4-dev</depend>
  <depend>chat_model</depend>

 
</package>
